--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </section>
 <section class="do_container">
   <div class="box shadow">
-    <div><img src="./d-1.png" alt="website template image"  class="img-box">
+    <div><img src="./image/d-1.png" alt="website template image"  class="img-box">
     </div>
     <div class="detail-box">
       <h6>Marketing</h6>
