--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
 </section>
 <section class="do_container">
   <div class="box shadow">
-    <div><img src="./image/d-1.png" alt="website template image"  class="img-box">
+    <div><img src="./images/d-1.png" alt="website template image"  class="img-box">
     </div>
     <div class="detail-box">
       <h6>Marketing</h6>
     </div>
   </div>
   <div class="box shadow">
-    <div><img src="./d-2.png" alt="website template image" class="img-box">
+    <div><img src="./images/d-2.png" alt="website template image" class="img-box">
     </div>
     <div class="detail-box">
       <h6>Development</h6>
     </div>
   </div>
   <div class="box shadow">
-    <div><img src="./d-3.png" alt=" image" class="img-box">
+    <div><img src="./images/d-3.png" alt=" image" class="img-box">
     </div>
     <div class="detail-box">
       <h6>Html</h6>
     </div>
   </div>
   <div class="box shadow">
-    <div><img src="./d-4.png" alt="image"class="img-box">
+    <div><img src="./images/d-4.png" alt="image"class="img-box">
     </div>
     <div class="detail-box">
       <h6>Css</h6>
